# datathon_fiap

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: app.py
app/: app.py  bootstrap.py
app/artifacts_datathon/: applicants.py  feature.py  generate_master_table.py  prospects.py  train.py  utils.py
app/models/: lgbm_oversample_model.pkl
code/: applicants.py  generate_master_table.py  prospects.py  utils.py
datathon_package/: applicants.py  generate_master_table.py  prospects.py  utils.py
pipelines/: train.py
scripts/: bootstrap.py
tests/test_datathon_package/: test_utils.py
